# CPP_Piscine_06

./: .gitignore  .gitmodules
ex00/: CMakeLists.txt  CharHandler.cpp  CharHandler.h  InputEvaluator.cpp  InputEvaluator.h  Makefile  NumberHandler.cpp  NumberHandler.h  README.MD  Test Results - Google_Tests_run.html  main.cpp
ex00/src/: CharHandler.cpp  CharHandler.h  InputEvaluator.cpp  InputEvaluator.h  NumberHandler.cpp  NumberHandler.h  ScalarConversion.cpp  ScalarConversion.h  main.cpp
ex00/test/: CMakeLists.txt  char_test.cpp  correct_input.cpp  int_test.cpp  ratio_test.cpp  test_main.cpp  wrong_input.cpp
ex01/: Makefile
ex01/src/: Data.cpp  Data.h  main.cpp
ex02/: Makefile
ex02/src/: A.cpp  A.h  B.cpp  B.h  Base.cpp  Base.h  C.cpp  C.h  main.cpp
